fixed header z-index

--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,7 @@ main header{
     position: sticky;
     top: 0;
     left: 0;
+    z-index: 10;
 }
 
 main header a{
